update logo in checkout

--- a/kingdom.css
+++ b/kingdom.css
@@ -15,7 +15,7 @@ body {
   top: 10vh;
   width: 100vw;
   height: 30vh;
-  background: url(https://i.imgur.com/EXD54cZ.png) center/auto 100% no-repeat;
+  background: url(https://i.imgur.com/LyeIw6T.png) center/auto 100% no-repeat;
 }
 
 .content {
